@@ -583,22 +583,6 @@
                     <property name="visible">yes</property>
 
                     <child>
-                      <widget class="GtkCheckButton" id="use_category_defaults_toggle">
-                        <property name="can_focus">yes</property>
-                        <property name="label" translatable="yes">Use category _defaults</property>
-			<property name="use_underline">True</property>
-                        <property name="active">no</property>
-                        <property name="draw_indicator">yes</property>
-                        <property name="visible">yes</property>
-                      </widget>
-                      <packing>
-                        <property name="padding">0</property>
-                        <property name="expand">no</property>
-                        <property name="fill">no</property>
-                      </packing>
-                    </child>
-
-                    <child>
                       <widget class="GtkHBox" id="component_box">
                         <property name="homogeneous">no</property>
                         <property name="spacing">4</property>
