@@ -1,3 +1,9 @@
+2002-07-09  Jody Goldberg <jody@gnome.org>
+
+	* file-types-properties.glade : disable the use of category defaults
+	* file-types-capplet.c (launch_edit_dialog) : disable editing category
+	  handlers.
+
 2002-06-26  Jody Goldberg <jody@gnome.org>
 
 	* mime-type-info.c (mime_type_info_load_all) : do not trust
